--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "vite": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
